<resources>
    <string name="app_name">mmSerialPort</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="sent_bytes">Sent bytes</string>
    <string name="received_back">Received back</string>
    <string name="lost_bytes">Lost bytes</string>
    <string name="corrupted_bytes">Corrupted bytes</string>
    <string name="zero">0</string>

    <string name="button_start">Start</string>

    <string name="error_configuration">Please configure your serial port first.</string>
    <string name="error_security">You do not have read/write permission to the serial port.</string>
    <string name="error_unknown">The serial port can not be opened for an unknown reason.</string>
</resources>
