<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoopbackActivity">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:keepScreenOn="true"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/message"
        app:layout_constraintTop_toBottomOf="@+id/set_button">

        <LinearLayout
            android:id="@+id/LinearLayoutOutgoing"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewOutgoing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sent_bytes"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/TextViewOutgoingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutReceived"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/TextViewIncoming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/received_back"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/TextViewIncomingValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutLost"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewLost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lost_bytes"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewLostValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="24sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayoutCorrupted"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textViewCorrupted"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/corrupted_bytes"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/textViewCorruptedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>